2011-12-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp: spadCompile(): Declare
	in-stream special.

2011-12-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp: Turn 'try', 'catch' and
	'finally' into keywords.

2011-12-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/twofact.spad.pamphlet,
	src/algebra/multsqfr.spad.pamphlet,
	src/algebra/numode.spad.pamphlet: Do not use 'try' as
	variable name.


2011-12-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/daase.lisp, src/interp/int-top.boot,
	src/interp/i-toplev.boot, src/interp/msgdb.boot,
	src/interp/patches.lisp, src/interp/util.lisp:
	Misc cleanups.

2011-12-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/u32vec.spad.pamphlet: Add extended gcd
	and resultant.

2011-12-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/poly.spad.pamphlet: Replace '>' by '<'
	for better speed.

2011-12-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet: Fix numeric
	lambertW at 0.

2011-12-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Avoid SIGPIPE if possible.
	* configure.ac: Detect MSG_NOSIGNAL and EPIPE
	src/lib/sockio.s: Use them.

2011-12-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Support using gmp with Closure CL.
	* src/lisp/num-gmp.lisp, src/lib/gmp_wrap.c: Add code for
	Closure CL.
	confugure.ac, src/interp/util.lisp,
	src/lisp/Makefile.in: Adjust.

2011-12-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* rename src/lisp/num-sb.lisp to 
	src/lisp/num-gmp.lisp.
	src/lisp/Makefile.in: Adjust.

2011-12-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/coercespad.pamphlet: Add CoercibleFrom and
	ConvertibleFrom.
	src/algebra/Makefile.in: Adjust.

2011-12-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/view3D.spad.pamphlet: Remove wrong Lisp
	qualification.

2011-11-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
