@@ -1,5 +1,10 @@
 2011-12-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/hyper/macro.c:parse_parameters(): Fix another crash
+	on incorrect '#'.
+
+2011-12-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/bootlex.lisp: spadCompile(): Declare
 	in-stream special.
 
